feat: 组件库初始化

--- a/package.json
+++ b/package.json
@@ -1,20 +1,12 @@
 {
   "name": "picasso-ui",
   "version": "1.0.0",
-  "description": "组件库",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/lyxdream/picasso-ui.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/lyxdream/picasso-ui/issues"
-  },
-  "homepage": "https://github.com/lyxdream/picasso-ui#readme"
+  "description": "vue3组件库",
+  "private": true,
+  "workspaces":[
+    "packages/*"
+  ],
+  "devDependencies": {
+    "lerna": "^4.0.0"
+  }
 }
