--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
   "name": "picasso-ui",
   "version": "1.0.0",
-  "description": "vue3组件库",
+  "description": "vue3+ts组件库",
   "private": true,
-  "workspaces":[
+  "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "lerna": "^4.0.0",
+    "typescript": "^4.6.3"
+  },
+  "license": "ISC",
+  "dependencies": {
+    "vue": "^3.2.31"
   }
 }
