--- a/package.json
+++ b/package.json
@@ -7,11 +7,31 @@
     "packages/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.17.9",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-typescript": "^7.16.7",
+    "@vue/compiler-sfc": "^3.2.33",
+    "babel-loader": "^8.2.5",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "css-loader": "^6.7.1",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "lerna": "^4.0.0",
-    "typescript": "^4.6.3"
+    "sass": "^1.50.1",
+    "sass-loader": "^12.6.0",
+    "style-loader": "^3.3.1",
+    "typescript": "^4.6.3",
+    "url-loader": "^4.1.1",
+    "vue-loader": "^17.0.0",
+    "webpack": "^5.72.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "license": "ISC",
   "dependencies": {
     "vue": "^3.2.31"
+  },
+  "scripts": {
+    "docs-dev":"webpack serve --config ./docs/webpack.config.js"
   }
 }
