--- a/packages/theme-chalk/package.json
+++ b/packages/theme-chalk/package.json
@@ -1,18 +1,13 @@
 {
-  "name": "picasso-ui",
+  "name": "theme-chalk",
   "version": "0.0.0",
   "description": "> TODO: description",
-  "author": "lyxdream <m17801129726@163.com>",
+  "author": "yinxia",
   "homepage": "https://github.com/lyxdream/picasso-ui#readme",
   "license": "ISC",
-  "main": "src/picasso-ui.js",
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+  "publishConfig": {
+    "registry": "https://registry.yarnpkg.com/"
   },
-  "files": [
-    "lib"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lyxdream/picasso-ui.git"
