--- a/packages/theme-chalk/package.json
+++ b/packages/theme-chalk/package.json
@@ -2,7 +2,7 @@
   "name": "theme-chalk",
   "version": "0.0.0",
   "description": "> TODO: description",
-  "author": "yinxia",
+  "author": "lyxdream",
   "homepage": "https://github.com/lyxdream/picasso-ui#readme",
   "license": "ISC",
   "publishConfig": {
