--- a/packages/button-group/package.json
+++ b/packages/button-group/package.json
@@ -2,7 +2,7 @@
   "name": "@picasso-ui/button-group",
   "version": "0.0.0",
   "description": "> TODO: description",
-  "author": "lyxdream <m17801129726@163.com>",
+  "author": "lyxdream",
   "homepage": "https://github.com/lyxdream/picasso-ui#readme",
   "license": "ISC",
   "main": "lib/button-group.js",
