--- a/packages/checkbox/package.json
+++ b/packages/checkbox/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "@picasso-ui/icon",
+  "name": "@picasso-ui/checkbox",
   "version": "0.0.0",
   "description": "> TODO: description",
-  "keywords": [
-    "icon"
-  ],
   "author": "lyxdream",
   "homepage": "https://github.com/lyxdream/picasso-ui#readme",
   "license": "ISC",
-  "main": "src/icon.js",
+  "main": "lib/checkbox.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -16,6 +13,9 @@
   "files": [
     "lib"
   ],
+  "publishConfig": {
+    "registry": "http://registry-cnpm.weimiaocaishang.com/"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lyxdream/picasso-ui.git"
